iter_language/tests/corpus/invalid/queue-pubsub-missing-subscription.iter
queue pubsub {
  project = "p"
  topic   = "t"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
